# eoside

./: .gitignore  .releasenotes  .vscodeignore  LICENSE  README.md  eoside.ps1  getstarted.json  install.ps1  install.sh  link.bat  package.json  releasenotes.md  setup.py  statistics.md  temp.html  test.html
docs/: Makefile  README - Copy.md  README.md  conf.py  first_contract.md  five_minutes.md  five_minutes_movie.md  index.rst  installing_EOSIDE.md  installing_movie.md  intro.md  introduction_to_EOSIDE.md  release_notes.md  release_notes_history.md
docs/_static/: custom.css
docs/highlights/: highlights.md  native_tests.md
docs/tokenika_blogs/: native_debugger.md
docs/tutorials/: five_minutes_movie.md  installing_EOSIDE.md  introduction_to_EOSIDE.md  native_tests.md  packaging_tool.md
docs/version_readme/: 1.0.3-native_tests.md
docs/videos/: five_minutes_movie.md  installing_movie.md  native_debugger.md
eoside/: EOSIde-0.0.1.vsix  README.md  getstarted.json  package.json  recent.json
media/: getstarted.js  install.html  install.js  releasenotes.html  scripts.js  setup.html  setup.js  startpage.html  styles.css
sikuli_movies/: definitions.py  five_minutes.py  installing.py  macros.py  narration.md  settings.json  sikuli.sh  smart_contract_five_minutes.py  welcome_to_eoside.py
src/: definitions.ts  extension.ts  getstarted.ts  install.ts  native_debugger.ts  releasenotes.ts  setup.ts
templates/empty_project/: CMakeLists.txt
templates/empty_project/src/: CONTRACT_NAME.cpp  CONTRACT_NAME.hpp
vscode_ext/: README.md  eoside-0.0.1.vsix  package.json
(+49 files in other folders)
